# telegram-assist-bot

./: .editorconfig  .gitattributes  .gitignore  .secrets.baseline  AGENTS.md  CLAUDE.md  README.md  REQUIREMENTS.md  Telegram Channel Admin Assistant Bot Requirements.docx  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/workflows/: quality.yml
.pytest-tmp-20260713-125240/test_ai_task_enum_rejects_unkn2/: configuration.json
.pytest-tmp-20260713-125240/test_destination_and_provider_1/: configuration.json
.pytest-tmp-20260713-125240/test_direct_secret_values_in_j1/: configuration.json
.pytest-tmp-20260713-125240/test_does_not_treat_persian_qu0/: persian-question.txt
.pytest-tmp-20260713-125240/test_duplicate_json_keys_are_r1/: configuration.json
.pytest-tmp-20260713-125240/test_empty_local_inline_secret0/: configuration.local.json
.pytest-tmp-20260713-125240/test_enabled_ai_feature_requir1/: configuration.json
.pytest-tmp-20260713-125240/test_enabled_provider_requires0/: configuration.json
.pytest-tmp-20260713-125240/test_environment_reference_nam1/: configuration.json
.pytest-tmp-20260713-125240/test_every_logging_enum_member0/: configuration.json
.pytest-tmp-20260713-125240/test_every_logging_enum_member2/: configuration.json
.pytest-tmp-20260713-125240/test_every_logging_enum_member3/: configuration.json
.pytest-tmp-20260713-125240/test_identifiers_names_routes_1/: configuration.json
.pytest-tmp-20260713-125240/test_identifiers_names_routes_4/: configuration.json
.pytest-tmp-20260713-125240/test_identifiers_names_routes_8/: configuration.json
.pytest-tmp-20260713-125240/test_invalid_configuration_nev0/: foundation.configuration.json
.pytest-tmp-20260713-125240/test_invalid_session_fails_bef0/: milestone-one.json
.pytest-tmp-20260713-125240/test_invalid_zoneinfo_values_a1/: configuration.json
.pytest-tmp-20260713-125240/test_invalid_zoneinfo_values_a2/: configuration.json
.pytest-tmp-20260713-125240/test_invalid_zoneinfo_values_a3/: configuration.json
.pytest-tmp-20260713-125240/test_loading_does_not_touch_se0/: configuration.json
.pytest-tmp-20260713-125240/test_malformed_json_reports_co0/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_range_boundaries_1/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_range_boundaries_6/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_range_boundaries_8/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_values_outside_ra10/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_values_outside_ra5/: configuration.json
.pytest-tmp-20260713-125240/test_numeric_values_outside_ra8/: configuration.json
.pytest-tmp-20260713-125240/test_provider_base_url_cannot_0/: configuration.json
.pytest-tmp-20260713-125240/test_provider_base_url_require0/: configuration.json
.pytest-tmp-20260713-125240/test_real_startup_is_repeatabl0/: foundation.configuration.json
.pytest-tmp-20260713-125240/test_rejects_common_mojibake_m2/: mojibake.txt
artifacts/: approval-delivery-shutdown-coverage-20260713-151540.json  approval-supervisor-coverage-20260713-150619.json  coverage-20260713-125240.json  coverage-20260713-125607.json  coverage-20260713-125850.json
config/: configuration.example.json
deploy/: iran-vpn-worker.service  telegram-admin-bot.service  telegram-collector.service  telegram-suite.service
docs/: ARCHITECTURE.md  CODE_MAP.md  DECISIONS.md  REQUIREMENTS.md  ROADMAP.md  RUNNING.md  STATUS.md
npvt-link-extractor/: BNBN-1-2-3-4.npvt  JKJK-1-2-3-4.npvt  README-FA.md  npvt_link_extractor.py  اجرا با کشیدن فایل.bat
scripts/: build_publish.py  check_distribution.py  check_text_integrity.py  entry_collector.py  entry_iran_vpn_worker.py  entry_main.py  entry_run_all.py  install_ubuntu.sh
src/: composition.py  main.py  run_all.py
tests/: __init__.py
(+654 files in other folders)
