[build-system]
requires = ["editables==0.5", "hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "telegram-assist-bot"
version = "0.1.0"
description = "A modular Telegram channel administration assistant."
readme = "README.md"
requires-python = ">=3.12,<3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.12.0,<3",
    "tzdata>=2025.2",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0,<2",
    "editables==0.5",
    "hatchling==1.31.0",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.11.0,<1",
]

[tool.uv]
required-version = "==0.11.28"
no-build-isolation-package = ["telegram-assist-bot"]

[tool.hatch.build.targets.sdist]
include = [
    "/README.md",
    "/config/configuration.example.json",
    "/pyproject.toml",
    "/scripts",
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_assist_bot"]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--basetemp=.pytest-tmp",
    "-ra",
    "-m",
    "not live",
]
testpaths = ["tests"]
pythonpath = ["."]
xfail_strict = true
markers = [
    "integration: exercises infrastructure boundaries without live services",
    "contract: validates adapter contracts against synthetic fixtures",
    "e2e: exercises controlled end-to-end workflows with fakes",
    "live: requires explicitly configured external services and credentials",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["telegram_assist_bot"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = false

[tool.coverage.paths]
source = [
    "src/telegram_assist_bot",
    "*/site-packages/telegram_assist_bot",
]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "ANN",
    "ASYNC",
    "B",
    "BLE",
    "C4",
    "D",
    "DTZ",
    "E",
    "ERA",
    "F",
    "FA",
    "FLY",
    "G",
    "I",
    "ICN",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PT",
    "PTH",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "TC",
    "UP",
    "W",
]
ignore = [
    # Ruff formatter recommends disabling this rule to avoid unstable formatting.
    "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    # Tests use assertions and do not require public-API docstrings.
    "D",
    "S101",
]
"tests/unit/test_text_integrity.py" = [
    # Persian fixture literals are intentional and asserted byte-for-byte.
    "RUF001",
]
"scripts/**/*.py" = [
    # Command-line tools intentionally write concise results to the console.
    "T201",
]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-none-returning = true

[tool.ruff.lint.isort]
known-first-party = ["telegram_assist_bot"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]
pretty = true
show_column_numbers = true
show_error_codes = true
warn_unreachable = true
warn_unused_configs = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
